#326 closed bug (fixed)
MrPeeps! crash
Reported by: | johndrinkwater | Owned by: | |
---|---|---|---|
Priority: | low | Milestone: | R1 |
Component: | System/Kernel | Version: | |
Keywords: | Cc: | diver | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Can't remember how I caused this, presuming kernel problem re: libroot
(gdb) bt #0 0x00490f4e in vate9hoardHeap._threshold ()
from /boot/beos/system/lib/libroot.so
#1 0x003483b4 in BStatusBar::SetTextData ()
from /boot/beos/system/lib/libbe.so
#2 0x00347e07 in BStatusBar::Reset () from /boot/beos/system/lib/libbe.so #3 0x00216f0d in AboutView::MessageReceived (this=0x180333d8, msg=0x1800e6a0)
at /boot/home/Desktop/mrpeeps/AboutWindow.cpp:205
#4 0x002e1493 in BLooper::DispatchMessage ()
from /boot/beos/system/lib/libbe.so
#5 0x0035bc71 in BWindow::DispatchMessage ()
from /boot/beos/system/lib/libbe.so
#6 0x0035ecac in BWindow::task_looper () from /boot/beos/system/lib/libbe.so #7 0x002e29bf in BLooper::_task0_ () from /boot/beos/system/lib/libbe.so #8 0x00442870 in thread_entry () from /boot/beos/system/lib/libroot.so #9 0x7003ffec in ?? () (gdb)
Change History (8)
comment:1 by , 19 years ago
comment:2 by , 19 years ago
Owner: | changed from | to
---|
comment:3 by , 19 years ago
Cc: | added |
---|
comment:6 by , 19 years ago
Status: | new → closed |
---|
comment:7 by , 19 years ago
Resolution: | → fixed |
---|
Since we have its creator on board, maybe he can have a look :-)