arm64: optimized memset and vendored Arm string routines

Replace the generic byte/word string and memset routines on arm64 with
faster implementations, in both libroot and the kernel, matching the
approach already taken for memcpy (string/arch/arm64/memcpy.c).

- memset.c: a new DeBeOS routine in the memcpy.c idiom. Large zero fills
  use `dc zva` (honoring DCZID_EL0: taken only when DZP is clear and the
  block is 64 bytes, otherwise a stp fallback); everything else is a fixed
  ladder of overlapping wide stores with no loop. Replaces
  generic_memset.c for arm64.

- Vendor the MIT Arm optimized-routines aarch64 asm for memcmp, memchr,
  strlen, strchr, strchrnul, strcmp, strncmp, strcpy and memmove (the
  overlap-aware backward copy). The upstream .S and asmdefs.h are copied
  verbatim into arm-optimized-routines/ (commit 5288c42d); thin arm_*.S
  glue units #include each one and alias the public C name to its
  __<name>_aarch64 entry. memcpy stays DeBeOS's own memcpy.c.

The arch merge objects (libroot posix_string_arch_arm64.o and kernel
kernel_lib_posix_arch_arm64.o) build these; the generic musl/posix C
versions of the nine functions are dropped for arm64 in string/Jamfile,
musl/string/Jamfile and kernel/lib/Jamfile so each symbol is defined once.

The vendored routines use NEON; this is safe in the kernel because the
arm64 exception path saves and restores V0-31 on both EL0 and EL1 entry.
The anti-recursion guards (-fno-builtin, -fno-tree-loop-distribute-patterns)
are kept for the C files; the glue disables its own BTI/PAC note via a
#define since the As rule does not see CCFLAGS.

Verified: kernel_arm64 and libroot.so build clean; every public symbol
resolves to exactly one definition; memset ships `dc zva` and is a leaf
(no self-call); memset range logic fuzzed against libc (415,744 checks,
0 failures) across all DCZID variants and fill values.

Issues: #326 (memset), #327 (vendored string routines)